# Pandorica

./: .bzrignore  .gitignore  .gitmodules  .wt_translate  CMakeLists.txt  Pandorica.kdev4  README.md  VideoStreaming.kdev4  adduserdialog.cpp  adduserdialog.h  authorizeduser.h  authpage.cpp  authpage.h  comment.h  commentscontainerwidget.cpp  commentscontainerwidget.h  customitemdelegates.cpp  customitemdelegates.h  ffmpegmedia.cpp  ffmpegmedia.h  ffmpegmedia_p.h  findorphansdialog.cpp  findorphansdialog.h  group.cpp  group.h  groupsdialog.cpp  groupsdialog.h  html5player.cpp  html5player.h  latestcommentsdialog.cpp  loggedusersdialog.cpp  loggedusersdialog.h  main.cpp  media.cpp  media.h  mediaattachment.cpp  mediaattachment.h  mediacollection.cpp  mediacollection.h  mediacollectionbrowser.cpp  (+42 more)
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
MediaScanner/: createthumbnails.cpp  createthumbnails.h  createthumbnails_p.h  mediascannerdialog.cpp  mediascannerdialog.h  mediascannerdialog_p.h  mediascannerpage.h  mediascannerstep.h  savesubtitlestodatabase.cpp  savesubtitlestodatabase.h  savesubtitlestodatabase_p.h  scanmediainfopage.cpp  scanmediainfopage.h  scanmediainfopage_p.h  scanmediainfostep.cpp  scanmediainfostep.h  scanmediainfostep_p.h
Models/: group.cpp  mediaattachment.cpp  mediaattachment.h  mediarating.cpp  mediarating.h  models.h  sessioninfo.h  setting.cpp  setting.h  user.cpp  user.h
cmake/: FindFFMPEG.cmake  FindGraphicsMagick.cmake
ffmpeg-static/: CMakeLists.txt
files/: CMakeLists.txt  icons.qrc  pandorica-icon.xcf  pandorica.xcf  pandorica.xml  strings.xml  strings_it.xml
files/desktop-files/: pandorica.desktop
files/html_templates/: Wt.Auth.template.login.html  html5player.mediatag.html
files/icons/: CMakeLists.txt  pandorica.rc
files/static/: Pandorica.css  streamingapp.css
files/static/icons/filesystem/: files.xcf
html_templates/: Wt.Auth.template.login.html  html5player.mediatag.html  html5player.videotag.html  navbar.html  player.source.html  player.track.html
libffmpegthumbnailer/: CMakeLists.txt  moviedecoder.cpp
player/: html5player.cpp  html5player.h  player.h  videojs.cpp  videojs.h  wmediaplayerwrapper.cpp  wmediaplayerwrapper.h
private/: authpage_p.h  createthumbnails_p.h  findorphansdialog_p.h  mediacollection_p.h  mediacollectionbrowser_p.h  mediascannerdialog_p.h  playlist_p.h  savesubtitlestodatabase_p.h  scanmediainfostep_p.h  serversettingsdialog_p.h  session_p.h  settings_p.h  streamingapp_p.h  utils_p.h
scripts/: .generateFileData.sh.swp  LicenseHeader.txt  cleanSqlite.sh  cmake_default_opts_local  createMigration  forwardSMTPFromZerogoki.sh  generateFileData.sh  generate_magick_cmake_conf  migrate  package-win.sh  rmuser.sh  seed.sh  setFilesMetadata.sh  sql_common.sh
src/: CMakeLists.txt  authpage.cpp  authpage.h  commentscontainerwidget.cpp  commentscontainerwidget.h  customitemdelegates.cpp  customitemdelegates.h  ffmpegmedia.cpp  ffmpegmedia.h  fileresource.cpp  fileresource.h  findorphansdialog.cpp  findorphansdialog.h  googlepicker.cpp  googlepicker.h  groupsdialog.cpp  groupsdialog.h  latestcommentsdialog.cpp  latestcommentsdialog.h  loggedusersdialog.cpp  loggedusersdialog.h  main.cpp  media.cpp  media.h  mediacollection.cpp  mediacollection.h  mediacollectionbrowser.cpp  mediacollectionbrowser.h  mediainfopanel.cpp  mediainfopanel.h  mediapreviewwidget.cpp  mediapreviewwidget.h  mediathumbnailgenerator.cpp  mediathumbnailgenerator.h  navigationbar.cpp  navigationbar.h  pandorica.cpp  pandorica.h  pandorica.rc  pandoricawizard.cpp  (+35 more)
src/MediaScanner/: createthumbnails.cpp  createthumbnails.h  googlepicker.cpp  mediascanner.cpp  mediascanner.h  mediascannerdialog.cpp  mediascannerdialog.h  mediascannerstep.cpp  mediascannerstep.h  savesubtitlestodatabase.cpp  savesubtitlestodatabase.h  scanmediainfostep.cpp  scanmediainfostep.h
src/MediaScanner/private/: createthumbnails_p.h  mediascanner_p.h  mediascannerdialog_p.h  savesubtitlestodatabase_p.h  scanmediainfostep_p.h
src/Models/: collection_item_properties.h  comment.h  group.cpp  group.h  mediaattachment.cpp  mediaattachment.h  mediaproperties.h  mediarating.cpp  mediarating.h  models.h  sessiondetails.h  sessioninfo.cpp  sessioninfo.h  setting.cpp  setting.h  user.cpp  user.h
src/libffmpegthumbnailer/: imagetypes.h  moviedecoder.cpp  moviedecoder.h  stringoperations.cpp  videothumbnailer.cpp
src/media/: CMakeLists.txt  media.cpp  media.h  mediacollection.cpp  mediacollection.h  mediadirectory.cpp  mediadirectory.h  mediadirectory_p.h
src/media/private/: mediacollection_p.h  mediadirectory_p.h
src/migrations/: comments.h  create_migrations_table.h  media.h  migrations.h  sessiontracking.h  users.h
src/player/: html5player.cpp  html5player.h  mediaelementjs.cpp  mediaelementjs.h  player.h  purehtml5js.cpp  purehtml5js.h  videojs.cpp  videojs.h  wmediaplayerwrapper.cpp  wmediaplayerwrapper.h
src/player/private/: html5player_p.h
src/private/: authpage_p.h  commentscontainerwidget_p.h  createthumbnails_p.h  ffmpegmedia_p.h  findorphansdialog_p.h  html5player_p.h  mediacollection_p.h  mediacollectionbrowser_p.h  mediainfopanel_p.h  mediascannerdialog_p.h  navigationbar_p.h  pandorica_p.h  playlist_p.h  savesubtitlestodatabase_p.h  scanmediainfostep_p.h  selectdirectories_p.h  serversettingsdialog_p.h  serversettingspage_p.h  session_p.h  settings_p.h  streamingapp_p.h  usersmanagementpage_p.h  utils_p.h
src/utils/: CMakeLists.txt  concatstrings.cpp  d_ptr.h  d_ptr_implementation.h  image.cpp  image.h  scope.cpp  semaphore.cpp  semaphore.h  utils.cpp  utils.h
src/utils/private/: concatstrings_p.h  image_p.h  semaphore_p.h  utils_p.h
support/ArchLinux-Aur/: .PKGBUILD.swp
support/ArchLinux-Aur/pandorica-git/: PKGBUILD
tests/: CMakeLists.txt  boost_unit_tests_helper.h  ffmpegmedia_integration_test.cpp  mediadirectorytest.cpp  mediascannersemaphoretest.cpp  threadpool_test.cpp
