cmake_minimum_required(VERSION 2.8)
enable_testing()
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
set(app_name Pandorica)
project(${app_name})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_definitions(-DWT_NO_SLOT_MACROS)
find_package(Wt 3.3.1 REQUIRED)
find_package(FFMPEG REQUIRED)


message("Found FFMPEG: ${AVFORMAT_INCLUDE_DIRS}")
INCLUDE (CheckIncludeFiles)
include(FindPackageHandleStandardArgs)
find_package(Boost REQUIRED COMPONENTS signals system filesystem chrono thread regex program_options random date_time serialization OPTIONAL_COMPONENTS unit_test_framework )
set(Disable_Qt5 False CACHE bool "Disable Qt5 detection")
set(Disable_Qt False CACHE bool "Disable Qt detection")
if( NOT Disable_Qt )
  if( NOT Disable_Qt5 )
    FIND_PACKAGE(Qt5Widgets)
  endif( NOT Disable_Qt5 )

  if(NOT Qt5Widgets_FOUND)
    FIND_PACKAGE(Qt4 )
  endif(NOT Qt5Widgets_FOUND)
endif( NOT Disable_Qt )
add_definitions(-DBOOST_SIGNALS_NO_DEPRECATION_WARNING)

#add_definitions(-fno-stack-protector )
if(NOT QT4_FOUND AND NOT Qt5Widgets_FOUND)
  find_package(GraphicsMagick REQUIRED)
  if(GraphicsMagick_FOUND)
    add_definitions(-DIMAGE_USE_GRAPHICSMAGICK)
  endif(GraphicsMagick_FOUND)
endif(NOT QT4_FOUND AND NOT Qt5Widgets_FOUND)

include_directories(${Wt_INCLUDE_DIR} ${QT_INCLUDE_DIR} ${CMAKE_SOURCE_DIR} ${GRAPHICSMAGICK_INCLUDE_DIRS} src )

find_path(HAVE_DBO_SQLITE3 Wt/Dbo/backend/Sqlite3)
find_path(HAVE_DBO_MYSQL Wt/Dbo/backend/MySQL)
find_path(HAVE_DBO_POSTGRES Wt/Dbo/backend/Postgres)
FIND_PACKAGE_HANDLE_STANDARD_ARGS(DBO_MYSQL DEFAULT_MSG HAVE_DBO_MYSQL)
FIND_PACKAGE_HANDLE_STANDARD_ARGS(DBO_POSTGRES DEFAULT_MSG HAVE_DBO_POSTGRES)
FIND_PACKAGE_HANDLE_STANDARD_ARGS(DBO_SQLITE3 DEFAULT_MSG HAVE_DBO_SQLITE3)



add_definitions(-DHAVE_PNG)
set(DISABLE_MYSQL False CACHE bool "Disable MySql Wt Backend")

if(${DBO_MYSQL_FOUND} AND NOT(${DISABLE_MYSQL}) )
  add_definitions(-DHAVE_MYSQL)
  STRING(REGEX REPLACE "wtdbo" "wtdbomysql" Wt_DBOMYSQL_DEBUG_LIBRARY "${Wt_DBO_DEBUG_LIBRARY}")
  STRING(REGEX REPLACE "wtdbo" "wtdbomysql" Wt_DBOMYSQL_LIBRARY "${Wt_DBO_LIBRARY}")
endif(${DBO_MYSQL_FOUND} AND NOT(${DISABLE_MYSQL}) )
if(${DBO_POSTGRES_FOUND} AND NOT (${DISABLE_POSTGRESQL}) )
  add_definitions(-DHAVE_POSTGRES)
endif(${DBO_POSTGRES_FOUND} AND NOT (${DISABLE_POSTGRESQL}) )
if(${DBO_SQLITE3_FOUND})
  add_definitions(-DHAVE_SQLITE3)
endif(${DBO_SQLITE3_FOUND})

set(Wt_CONNECTOR_LIBRARY "${Wt_HTTP_LIBRARY}")
set(Wt_CONNECTOR_DEBUG_LIBRARY ${Wt_HTTP_DEBUG_LIBRARY})

SET(SHARED_FILES_DIR ${CMAKE_INSTALL_PREFIX}/share/${app_name} CACHE string "Shared files installation directory")
add_definitions(-DSHARED_FILES_DIR="${SHARED_FILES_DIR}" )

set(TRANSLATION_FILES files/strings.xml files/strings_it.xml )
INSTALL(FILES ${TRANSLATION_FILES} DESTINATION ${SHARED_FILES_DIR} )
INSTALL(FILES files/title_from_filename_replacements.json DESTINATION ${SHARED_FILES_DIR})
INSTALL(DIRECTORY files/html_templates DESTINATION ${SHARED_FILES_DIR} FILES_MATCHING PATTERN "*.html" )
INSTALL(DIRECTORY files/static DESTINATION ${SHARED_FILES_DIR} )
if(QT_FOUND OR Qt5Widgets_FOUND)
  INSTALL(FILES files/desktop-files/pandorica.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications)
  INSTALL(DIRECTORY files/desktop-files/hicolor DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons )
endif(QT_FOUND OR Qt5Widgets_FOUND)

add_subdirectory(Wt-Commons)
add_subdirectory(src)
add_subdirectory(tests)
